--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,18 @@ baseurl: #"/airspace-jekyll"
 
 # Build settings
 markdown: kramdown
+
+defaults:
+  -
+    scope:
+      path:         ""
+      type:         "pages"
+    values:
+      layout:       "page"
+  -
+    scope:
+      path:         ""
+      type:         "posts"
+    values:
+      layout:       "post"
+
